# course-2025

./: .gitignore  pyproject.toml
lecture_01/: part_1_Mesa_项目介绍.pptx  part_2_ABM_overview.md
lecture_01/part_3_example_wolf_sheep_model_withoutABMsimulator/: model.py  run.py  tutorial_wolf-sheep_model.md
lecture_01/part_3_homework_lecture1/: agents.py  homework_lecture1.md
lecture_02/: part_1_contribution_workflow.pptx  part_2_Python_Project_Management.md
lecture_03/: .gitignore  README.md  params.yaml  schelling.py
lecture_03/scripts/: analysis_utils.py  final_stats.py  generate_phase_diagram.py  plot_g_vs_n_segregation.py  plot_process.py  plot_sensitivity.py
lecture_03/slide/: abmind03_present.qmd  style.scss
lecture_03/workflow/: Snakefile
lecture_04/: part_1_vibe_coding_En.pptx  part_2_vibe_coding_practical_guide_en.md  part_2_vibe_coding_practice.md
lecture_05/: .gitignore  mesa_geo.qmd
lecture_06/: part2_02_ABM_analysis.md  part_1.1_多主体模型设计心得.md
lecture_06/part_1_mesa_github_actions/: part_1_mesa_github_actions.qmd
lecture_06/part_2_mesa_github_actions/: part_2_mesa_github_actions.qmd
lectures/lec01/: lec01_1314_mesa_exercises.pptx
lectures/lec01/2_example_wolf_sheep_model_withoutABMsimulator/: agent.py  tutorial_wolf-sheep_model.md  wolf_sheep.ipynb
lectures/lec01/2_homework_lecture1/: app.py  homework_lecture1.md  model.py  money_model.ipynb  moneymodel_tutorial.md
lectures/lec04/: lec04_schelling.ipynb  model.py  schelling_tutorial.ipynb  schelling_uml.excalidraw
lectures/lec07/: lec07_sn.ipynb  sn_tutorial_PS.ipynb
(+14 files in other folders)
