[project]
dependencies = [
  "altair>=6.0.0",
  "matplotlib>=3.10.7",
  "mesa>=3.3.1",
  "mpi4py>=4.1.1",
  "networkx>=3.5",
  "numpy>=2.2.2",
  "pandas>=2.3.3",
  "pre-commit>=4.3.0",
  "quarto>=0.1.0",
  "repast4py>=1.2.1",
  "seaborn>=0.13.2",
  "snakemake>=9.14.5",
  "solara>=1.54.0",
]
description = "Add your description here"
name = "course"
readme = "README.md"
requires-python = "==3.11.11"
version = "0.1.0"
